feat: all test with swagger